--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "contao-community-alliance/event-dispatcher",
+    "name": "designs2/event-dispatcher",
     "description": "Event dispatcher service for Contao Open Source CMS",
     "keywords": [
         "contao",
@@ -21,19 +21,19 @@
         "issues": "https://github.com/contao-community-alliance/event-dispatcher/issues",
         "wiki": "https://github.com/contao-community-alliance/event-dispatcher/wiki",
         "irc": "irc://irc.freenode.org/contao.dev",
-        "source": "https://github.com/contao-community-alliance/event-dispatcher"
+        "source": "https://github.com/designs2/event-dispatcher"
     },
     "require": {
         "php": ">=5.3",
-        "contao/core": ">=2.11,<4-dev",
-        "contao-community-alliance/composer-plugin": "~2.0",
-        "contao-community-alliance/dependency-container": "~1.6",
+        "contao/core": ">=2.11,<4",
+        "contao-community-alliance/composer-plugin": "*",
+        "cdesigns2/dependency-container": "*",
         "symfony/event-dispatcher": "~2.3"
     },
     "require-dev": {
-        "contao-community-alliance/coding-standard": "~1.0",
-        "contao-community-alliance/build-system": "~1.0",
-        "contao-community-alliance/build-system-all-tasks": "~1.0"
+        "contao-community-alliance/coding-standard": "*",
+        "contao-community-alliance/build-system": "*",
+        "contao-community-alliance/build-system-all-tasks": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
